hf_hec_broker/https_service_inbound.yaml

apiVersion: v1
kind: Service
metadata:
  name: splunk-hec-inbound
  namespace: splunk
spec:
  selector:
    app: splunk
  ports:
  - port: 8088
    name: splunk-hec
    appProtocol: https
  - port: 443
    name: https-web
