hf_hec_broker/inbound_gateway_tlsterm.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: gateway
  namespace: splunk
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 8088
      name: https
      protocol: HTTPS
    hosts:
      - "*"
    tls:
      mode: SIMPLE
      credentialName: hec-credential
